--- a/index.html
+++ b/index.html
@@ -34,28 +34,20 @@ Spain<p>
 
 <hh1>
 <hr align="LEFT"> 
-My main interest in research is the application of statistical and 
-Critical Phenomena approaches to emergent social phenomena. The 
-possibility of finding universal patterns, i.e, same qualitative 
-behavior in different kind of phenomena. The similarity comes from the 
-fact that collective emerging phenomena do not depend on the microscopic
- details of the process. The determinant properties are instead the 
-symmetries, dimensionality, and conserved quantities. The theory implied
- on this methodology is the foundation for the field of Critical 
-Phenomena, which has proved to be fruitful in allowing for the 
-understanding of several patterns of universality.<p>
+My scientific line’s backbone is exploring the theoretical foundations of socio-economic phenomena
+through the approach of Complex Systems and Critical Phenomena. I am interested in finding the
+relevant variables to uncover the universality classes underlying the different facets manifested by
+human-interacting particles. I have been pursuing this focus since my PhD studies, and I have
+continued working in this direction in parallel to my teaching activity.<p>
 
 
-The use of statistical methods has allowed for major advances in this 
-area, by providing a bridge between the microscopic interactions and the
- large collective behavior of the system. My initial research activities
- were focused on agent based models. Making the analogy with social 
-systems, is how I could see the emergent phenomena as a consequence of 
-well-thought local rules among the interacting particles, which in the 
-case of social phenomena are interacting human beings. After several 
-works on this direction, I started with data science, as the only way 
-for seeking what kind of patterns regarding human behavior is expressed 
-by the data.  
+After my academic formation on Statistical Mechanics and Critical Phenomena during my formal
+studies, my initial research activities were focused on agent-based models. Drawing analogies with
+social systems helped me to understand the emergent phenomena, as a consequence of well-thought
+local rules among interacting particles. After several works in that direction, I started with Data
+Science, uncovering which types of patterns regarding human behaviour are expressed by the data.
+In my last postdoctoral position, I also worked on high-dimensional analysis. After this preliminary
+stage, I am building my own research line to analyse criticality in socio-economic systems.  
 </hh1> 
 
 <h2 align="CENTER"> <img src="yo.png" width="250/">  
@@ -69,10 +61,7 @@ by the data.
 
 <p>
 <font size="3">     <font color="black"> 
-Yérali Gandica is currently an Assistant Professor at the Laboratoire de Physique Théorique et Modélisation (LPTM) - Physics department & International Bachelor. CY Cergy Paris Université. Paris, France. YG hold a degree in Physics from the Universidad Simón Bolívar (Caracas-Venezuela) and a PhD in Physics from the Venezuelan Institute for Research (IVIC). Then, she spend 7 years among 4 Postdoctoral positions in Europe. First, at the Center for Computational Physics in the Universidade de Coimbra, Portugal. There she started studies on Agent-based models and Big Data. Secondly, she got a Postdoctoral fellow at the Namur Center for Complex Systems (naXys) at the Mathematics Department of the University of Namur, where she worked on Agent-based models (ABM) and started on Network Science. After, she joined the Center for Research in Finance and Management (CeReFiM), at the Business Department of the Faculty of Economics, Social Sciences and Business Administration in the Université de Namur. During that Postdoctoral fellowship, YG started applying the concepts of Network Science to financial data. Later on, she worked an an Associate Scientific Researcher at the Center for Operations Research and Econometrics (CORE) and at Institute of Information and Communication Technologies, Electronics and Applied Mathematics (ICTEAM) Université catholique de Louvain, working on Geo-localised Data. As a second academic formation, YG has complemented her PhD following several courses on Sociology (the first three years of this major). YG also has a broad experience working in computational social science, Big Data and network science among several interdisciplinary groups (mathematics, finance, geography, engineering and biology).
-
-
-
+Yérali Gandica is currently an Associate Professor at the Valencian International University. YG hold a degree in Physics from the Universidad Simón Bolívar (Caracas-Venezuela) and a PhD in Physics from the Venezuelan Institute for Research (IVIC). Then, she spend 7 years among 4 Postdoctoral positions in Europe. First, at the Center for Computational Physics in the Universidade de Coimbra, Portugal. There she started studies on Agent-based models and Big Data. Secondly, she got a Postdoctoral fellow at the Namur Center for Complex Systems (naXys) at the Mathematics Department of the University of Namur, where she worked on Agent-based models (ABM) and started on Network Science. After, she joined the Center for Research in Finance and Management (CeReFiM), at the Business Department of the Faculty of Economics, Social Sciences and Business Administration in the Université de Namur. During that Postdoctoral fellowship, YG started applying the concepts of Network Science to financial data. Later on, she worked an an Associate Scientific Researcher at the Center for Operations Research and Econometrics (CORE) and at Institute of Information and Communication Technologies, Electronics and Applied Mathematics (ICTEAM) Université catholique de Louvain, working on Geo-localised Data. As a second academic formation, YG has complemented her PhD following several courses on Sociology (the first three years of this major). YG also has a broad experience working in computational social science, Big Data and network science among several interdisciplinary groups (mathematics, finance, geography, engineering and biology). Her previous position was as an Assistant Professor at the Laboratoire de Physique Théorique et Modélisation (LPTM) - Physics department & International Bachelor. CY Cergy Paris Université. Paris, France.
 
 </p></hh1></div>
 </div>
