--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@ Spain<p>
 
 <LI> <b> [23] </b> <NOM> Detection and effect of social events on Wikipedia data-set for studying human preferences </NOM> <br />
 <PAPER> Julien Assuied and Yérali <u>Gandica</u><br />
-  Accepted in Frontiers in Big Data </PAPER> <p>
+Frontiers in Big Data. Sec. Data Science. <b> 6 </b> - 2023.  Doi: 10.3389/fdata.2023.1077318. </PAPER> <p>
   
 <LI> <b> [22] </b> <NOM> The consequences of hesitation: Axelrod model with intrinsic noise </NOM> <br />
 <PAPER> Rémi Perrier, Yérali <u>Gandica</u> and Laura Hernández <br />
