--- a/publications.html
+++ b/publications.html
@@ -81,9 +81,10 @@ Insights from network science </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Marco Geraci, Sophie B&eacutereau and  Jean&#45Yves Gnabo <br />
 PLoS ONE <b> 13</b>(4): e0195110. https://doi.org/10.1371/journal.pone.0195110 (2018) </PAPER> <p>
 
-<LI> <b> [15] </b> <NOM> Influence of homophily and community formation on bounded confidence dynamics </NOM> <br />
+<LI> <b> [15] </b> <NOM> The Role of Homophily in the Emergence of Opinion Controversies </NOM> <br />
 <PAPER> Floriana Gargiulo and Y&eacuterali <u>Gandica</u> <br />
-Journal of Artificial Societies and Social Journal of Artificial Societies and Social Simulation (JASSS) <b> 20</b> (3) 8.(2017) </PAPER> <p>
+Journal of Artificial Societies and Social Journal of Artificial Societies and Social Simulation (JASSS) <b> 20</b> (3) 8.
+DOI: 10.18564/jasss.3448 (2017) </PAPER> <p>
 
 <LI> <b> [14] </b> <NOM> Emergent dense suburbs in a schelling metapopulation model: a simulation approach </NOM> <br />
 <PAPER> Floriana  Garguilo, Y&eacuterali <u>Gandica</u> and Timoteo Carletti <br />
