--- a/publications.html
+++ b/publications.html
@@ -37,8 +37,13 @@ Spain<p>
   <div class="col col-2">
 
 </P><UL>
-<LI> <b> [26] </b> <NOM> The distance-aware Axelrod Model </NOM>  <br />
+<LI> <b> [27] </b> <NOM> The distance-aware Axelrod Model </NOM>  <br />
 <PAPER> Yérali <u>Gandica</u>, Petter Holme and Silvia Chiacchiera <br />  
+(Work in progress) </PAPER> <p>
+
+<LI> <b> [26] </b> <NOM> Temporal Activations in Bounded Confidence Model
+Opinion Dynamics </NOM>  <br />
+<PAPER> F. Zarei, <u> Y. Gandica</u> and  L. E C Rocha <br />  
 (Work in progress) </PAPER> <p>
   
 <LI> <b> [25] </b> <NOM> Bounded confidence models on growing SF networks </NOM> <br />
