--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@ Spain<p>
 
 <LI> <b> [28] </b> <NOM> Complex Network Analysis for Regional Economic Integration of Ethiopia in
 
-the 21 st Century </NOM>  <br />
+the 21st Century </NOM>  <br />
 <PAPER> Tekilu Tadesse Choramo, Jemal Abafita, <u> Y. Gandica</u> and  L. E C Rocha <br />   
 (Work in progress) </PAPER> <p>
 
@@ -62,7 +62,7 @@ Opinion Dynamics </NOM>  <br />
 
 <LI> <b> [23] </b> <NOM> Detection and effect of social events on Wikipedia data-set for studying human preferences </NOM> <br />
 <PAPER> Julien Assuied and Yérali <u>Gandica</u><br />
-Frontiers in Big Data. Sec. Data Science. <b> 6 </b>  Doi: 10.3389/fdata.2023.1077318. (2023) </PAPER> <p>
+Frontiers in Big Data. Sec. Data Science. <b> 6 </b>  Doi: 10.3389/fdata.2023.1077318 (2023) </PAPER> <p>
   
 <LI> <b> [22] </b> <NOM> The consequences of hesitation: Axelrod model with intrinsic noise </NOM> <br />
 <PAPER> Rémi Perrier, Yérali <u>Gandica</u> and Laura Hernández <br />
