--- a/publications.html
+++ b/publications.html
@@ -38,10 +38,14 @@ Spain<p>
 
 </P><UL>
 
-<LI> <b> [28] </b> <NOM> Complex Network Analysis for Regional Economic Integration of Ethiopia in
+<LI> <b> [29] </b> <NOM> Complex Network Analysis for Regional Economic Integration of Ethiopia in
 
 the 21st Century </NOM>  <br />
 <PAPER> Tekilu Tadesse Choramo, Jemal Abafita, <u> Y. Gandica</u> and  L. E C Rocha <br />   
+(Work in progress) </PAPER> <p>
+
+<LI> <b> [28] </b> <NOM> Bounded confidence models on growing SF networks </NOM> <br />
+<PAPER> Yérali <u>Gandica</u> and Guillaume Deffuant <br />
 (Work in progress) </PAPER> <p>
 
 <LI> <b> [27] </b> <NOM> The distance-aware Axelrod Model </NOM>  <br />
@@ -53,12 +57,13 @@ Opinion Dynamics </NOM>  <br />
 <PAPER> F. Zarei, <u> Y. Gandica</u> and  L. E C Rocha <br />  
 (In writing process) </PAPER> <p>
   
-<LI> <b> [25] </b> <NOM> Bounded confidence models on growing SF networks </NOM> <br />
+<LI> <b> [25] </b> <NOM>Bounded confidence models generate more secondary clusters when the number of agents is growing </NOM> <br />
 <PAPER> Yérali <u>Gandica</u> and Guillaume Deffuant <br />
-(Work in progress) </PAPER> <p>
+(Submitted: https://arxiv.org/pdf/2305.18858.pdf) </PAPER> <p>
   
 <LI> <b> [24] </b> <NOM> Signs of criticality in social explosions </NOM> <br />
-<PAPER> Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> <br /> (Submitted) </PAPER> <p>
+<PAPER> Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> 
+<br /> (Submitted: https://arxiv.org/pdf/2305.01944.pdf) </PAPER> <p>
 
 <LI> <b> [23] </b> <NOM> Detection and effect of social events on Wikipedia data-set for studying human preferences </NOM> <br />
 <PAPER> Julien Assuied and Yérali <u>Gandica</u><br />
