--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@ Opinion Dynamics </NOM>  <br />
 (Submitted: https://arxiv.org/pdf/2305.18858.pdf) </PAPER> <p>
   
 <LI> <b> [24] </b> <NOM> Signs of criticality in social explosions </NOM> <br />
-<PAPER> Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> 
+<PAPER> Mariano G. Beiró, J. Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> 
 <br /> (Submitted: https://arxiv.org/pdf/2305.01944.pdf) </PAPER> <p>
 
 <LI> <b> [23] </b> <NOM> Detection and effect of social events on Wikipedia data-set for studying human preferences </NOM> <br />
