--- a/index.html
+++ b/index.html
@@ -34,20 +34,11 @@ Spain<p>
 
 <hh1>
 <hr align="LEFT"> 
-My scientific line’s backbone is exploring the theoretical foundations of socio-economic phenomena
-through the approach of Complex Systems and Critical Phenomena. I am interested in finding the
-relevant variables to uncover the universality classes underlying the different facets manifested by
-human-interacting particles. I have been pursuing this focus since my PhD studies, and I have
-continued working in this direction in parallel to my teaching activity.<p>
+My scientific focus revolves around exploring the theoretical foundations of socio-economic phenomena using the framework of Complex Systems and Critical Phenomena. My primary interest lies in identifying the key variables that underlie the universal patterns in the various aspects of human interactions. I've pursued this line of research since my doctoral studies, consistently advancing it alongside my teaching responsibilities.
 
+My academic background in Statistical Mechanics and Critical Phenomena during my formal education paved the way for my initial research endeavors, which were centered on agent-based models. Drawing parallels with social systems greatly aided my comprehension of emergent phenomena, which arise from well-defined local rules governing the interactions among individuals. After several significant contributions in this area, I transitioned into the realm of Data Science. This transition allowed me to uncover patterns related to human behavior hidden within vast datasets. During my most recent postdoctoral position, I also delved into high-dimensional data analysis.
 
-After my academic formation on Statistical Mechanics and Critical Phenomena during my formal
-studies, my initial research activities were focused on agent-based models. Drawing analogies with
-social systems helped me to understand the emergent phenomena, as a consequence of well-thought
-local rules among interacting particles. After several works in that direction, I started with Data
-Science, uncovering which types of patterns regarding human behaviour are expressed by the data.
-In my last postdoctoral position, I also worked on high-dimensional analysis. After this preliminary
-stage, I am building my own research line to analyse criticality in socio-economic systems.  
+Building on this preliminary work, I am now establishing my own research agenda, which is dedicated to the analysis of criticality within socio-economic systems. 
 </hh1> 
 
 <h2 align="CENTER"> <img src="yo.png" width="250/">  
@@ -61,7 +52,9 @@ stage, I am building my own research line to analyse criticality in socio-econom
 
 <p>
 <font size="3">     <font color="black"> 
-Yérali Gandica is currently an Associate Professor at the Valencian International University. YG hold a degree in Physics from the Universidad Simón Bolívar (Caracas-Venezuela) and a PhD in Physics from the Venezuelan Institute for Research (IVIC). Then, she spend 7 years of Postdoctoral positions in Europe. First, at the Center for Computational Physics in the Universidade de Coimbra, Portugal. There she started studies on Agent-based models and Big Data. Secondly, she got a Postdoctoral fellow at the Namur Center for Complex Systems (naXys) at the Mathematics Department of the University of Namur, where she worked on Agent-based models (ABM) and started on Network Science. After, she joined the Center for Research in Finance and Management (CeReFiM), at the Business Department of the Faculty of Economics, Social Sciences and Business Administration in the Université de Namur. During that Postdoctoral fellowship, YG started applying the concepts of Network Science to financial data. Finally, she worked an an Associate Scientific Researcher at the Center for Operations Research and Econometrics (CORE) and at Institute of Information and Communication Technologies, Electronics and Applied Mathematics (ICTEAM) Université catholique de Louvain, working on Geo-localised Data. As a second academic formation, YG has complemented her PhD with a Licenciatura in Sociology. In summary, YG has a broad experience working on critical phenomena, computational social science, Big Data and network science among several interdisciplinary groups (mathematics, finance, geography, engineering and medicin). Her previous position was as an Assistant Professor at the International Bachelor in Data Science, and attached to the Laboratoire de Physique Théorique et Modélisation (LPTM), both at CY Cergy Paris Université. Paris, France.
+Yérali Gandica is currently an Associate Professor at the Valencian International University and at the ECAM-EPMI Graduate school of engineering in Cergy-Paris, France. Yérali holds a degree in Physics from Universidad Simón Bolívar (Caracas, Venezuela) and a PhD in Physics from the Venezuelan Institute for Research (IVIC). Subsequently, she spent 7 years in postdoctoral positions in Europe. First, at the Center for Computational Physics at the Universidade de Coimbra, Portugal, where she initiated studies on Agent-based models and Big Data. Secondly, she secured a postdoctoral fellowship at the Namur Center for Complex Systems (naXys) within the Mathematics Department of the University of Namur, where she worked on Agent-based models (ABM) and ventured into Network Science. Following that, she joined the Center for Research in Finance and Management (CeReFiM) at the Business Department of the Faculty of Economics, Social Sciences, and Business Administration at the Université de Namur. During this postdoctoral fellowship, Yérali began applying the concepts of Network Science to financial data. Finally, she worked as an Associate Scientific Researcher at the Center for Operations Research and Econometrics (CORE) and the Institute of Information and Communication Technologies, Electronics, and Applied Mathematics (ICTEAM) at Université catholique de Louvain, focusing on Geo-localized Data.
+
+In addition to her PhD, Yérali complemented her academic background with a Licenciatura in Sociology. In summary, Yérali has extensive experience working on critical phenomena, computational social science, Big Data, and network science across various interdisciplinary groups, including mathematics, finance, geography, engineering, and medicine. Her previous position was as an Assistant Professor at the International Bachelor in Data Science, affiliated with the Laboratoire de Physique Théorique et Modélisation (LPTM) at CY Cergy Paris Université, Paris, France.
 
 </p></hh1></div>
 </div>
