--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
 Associate Professor <p>
-Valencian International University <p>
-Spain<p>
+Valencian International University (Spain), and <p>
+ECAM-EPMI Graduate school of engineering in Cergy- Paris (France)<p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
 <a href="https://www.webofscience.com/wos/author/record/M-6261-2013">Web of Science</a>   <p>
