--- a/publications.html
+++ b/publications.html
@@ -22,8 +22,9 @@
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
 Associate Professor <p>
-Valencian International University (Spain), and <p>
-ECAM-EPMI Graduate school of engineering in Cergy- Paris (France)<p>
+Valencian International University (Spain) <p>
+
+
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
 <a href="https://www.webofscience.com/wos/author/record/M-6261-2013">Web of Science</a>   <p>
@@ -38,126 +39,129 @@ ECAM-EPMI Graduate school of engineering in Cergy- Paris (France)<p>
 
 </P><UL>
 
-<LI> <b> [29] </b> <NOM> Complex Network Analysis for Regional Economic Integration of Ethiopia in
+<LI> <b> [30] </b> <NOM> Complex Network Analysis for Regional Economic Integration of Ethiopia in
 
 the 21st Century </NOM>  <br />
 <PAPER> Tekilu Tadesse Choramo, Jemal Abafita, <u> Y. Gandica</u> and  L. E C Rocha <br />   
 (Work in progress) </PAPER> <p>
 
-<LI> <b> [28] </b> <NOM> Bounded confidence models on growing SF networks </NOM> <br />
+<LI> <b> [29] </b> <NOM> Bounded confidence models on growing SF networks </NOM> <br />
 <PAPER> Yérali <u>Gandica</u> and Guillaume Deffuant <br />
 (Work in progress) </PAPER> <p>
 
-<LI> <b> [27] </b> <NOM> The distance-aware Axelrod Model </NOM>  <br />
+<LI> <b> [28] </b> <NOM> The distance-aware Axelrod Model </NOM>  <br />
 <PAPER> Yérali <u>Gandica</u>, Petter Holme and Silvia Chiacchiera <br />  
 (Work in progress) </PAPER> <p>
 
-<LI> <b> [26] </b> <NOM> Temporal Activations in Bounded Confidence Model
-Opinion Dynamics </NOM>  <br />
-<PAPER> F. Zarei, <u> Y. Gandica</u> and  L. E C Rocha <br />  
-(In writing process) </PAPER> <p>
-  
-<LI> <b> [25] </b> <NOM>Bounded confidence models generate more secondary clusters when the number of agents is growing </NOM> <br />
+<LI> <b> [27] </b> <NOM> An entropic analysis of social manifestations </NOM>  <br />
+<PAPER> Daniel Rico and Yérali <u>Gandica</u> <br />  
+(Submitted) </PAPER> <p>
+
+<LI> <b> [26] </b> <NOM>Bounded confidence models generate more secondary clusters when the number of agents is growing </NOM> <br />
 <PAPER> Yérali <u>Gandica</u> and Guillaume Deffuant <br />
 (Submitted: https://arxiv.org/pdf/2305.18858.pdf) </PAPER> <p>
   
-<LI> <b> [24] </b> <NOM> Signs of criticality in social explosions </NOM> <br />
-<PAPER> Mariano G. Beiró, J. Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> 
-<br /> (Submitted: https://arxiv.org/pdf/2305.01944.pdf) </PAPER> <p>
+<LI> <b> [25] </b> <NOM> Signs of criticality in social explosions </NOM> <br />
+<PAPER> Mariano G. Beiró, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> 
+<br /> <b> Accepted Sci. Rep.</b> (https://arxiv.org/pdf/2305.01944.pdf) <b> (2024) </b> </PAPER> <p>
+
+<LI> <b> [24] </b> <NOM> Bursts of communication increase opinion diversity in the temporal Deffuant model </NOM>  <br />
+<PAPER> F. Zarei, <u> Y. Gandica</u> and  L. E C Rocha <br />  
+Sci Rep <b> 14 </b>, 2222. Doi.org/10.1038/s41598-024-52458-w. <b> (2024) </b> </PAPER> <p>
 
 <LI> <b> [23] </b> <NOM> Detection and effect of social events on Wikipedia data-set for studying human preferences </NOM> <br />
 <PAPER> Julien Assuied and Yérali <u>Gandica</u><br />
-Frontiers in Big Data. Sec. Data Science. <b> 6 </b>  Doi: 10.3389/fdata.2023.1077318 (2023) </PAPER> <p>
+Frontiers in Big Data. Sec. Data Science. <b> 6 </b>  Doi: 10.3389/fdata.2023.1077318 <b> (2023) </b> </PAPER> <p>
   
 <LI> <b> [22] </b> <NOM> The consequences of hesitation: Axelrod model with intrinsic noise </NOM> <br />
 <PAPER> Rémi Perrier, Yérali <u>Gandica</u> and Laura Hernández <br />
- PLoS ONE <b> 16 </b>(11): e0259295. DOI:10.1371/journal.pone.0259295 (2021) </PAPER> <p>
+ PLoS ONE <b> 16 </b>(11): e0259295. DOI:10.1371/journal.pone.0259295 <b> (2021) </b> </PAPER> <p>
  
 <LI> <b> [21] </b> <NOM> Bali ancient rice terraces: A Hamiltonian approach </NOM> <br />
 <PAPER> Yérali <u>Gandica</u>, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung and Lock Yue Chew  <br /> 
- Phys. Rev.Lett. <b>127</b>, 168301. https://doi.org/10.1103/PhysRevLett.127.168301 (2021) </PAPER> <p>
+ Phys. Rev.Lett. <b>127</b>, 168301. https://doi.org/10.1103/PhysRevLett.127.168301 <b> (2021) </b> </PAPER> <p>
  
 <LI> <b> [20] </b> <NOM> A multilevel analysis of financial institutions’ systemic exposure from local and system-wide information </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo <br /> Scientific Reports, <b> 10</b>, 
-17657. https://doi.org/10.1038/s41598-020-74259-7 (2020) </PAPER> <p>
+17657. https://doi.org/10.1038/s41598-020-74259-7 <b> (2020) </b> </PAPER> <p>
 
 <LI> <b> [19] </b> <NOM> The free and freer XY models </NOM> <br /> 
 <PAPER> Petter Holme and Y&eacuterali <u>Gandica</u> <br />
-Phys. Rev. E. <b>101</b>, 032311. https://doi.org/10.1103/PhysRevE.101.032311 (2020) </PAPER> <p>
+Phys. Rev. E. <b>101</b>, 032311. https://doi.org/10.1103/PhysRevE.101.032311 <b> (2020) </b> </PAPER> <p>
 
 <LI> <b> [18] </b> <NOM> Measuring the effect of node aggregation on community detection </NOM> <br /> 
 <PAPER> Y&eacuterali <u>Gandica</u>, Adeline Decuyper, Christophe Cloquet, Isabelle Thomas and Jean-Charles Delvenne <br /> 
-EPJ Data Sci. <b>9 </b>, 6 https://doi.org/10.1140/epjds/s13688-020-00223-0 (2020) </PAPER> <p>
+EPJ Data Sci. <b>9 </b>, 6 https://doi.org/10.1140/epjds/s13688-020-00223-0 <b> (2020) </b> </PAPER> <p>
 
 <LI> <b> [17] </b> <NOM> Population&#39s preferences trough Wikipedia edits </NOM> <br />  
 <PAPER> Y&eacuterali <u>Gandica</u> <br />
-https://ieeexplore.ieee.org/document/8554724. 2018 Fifth International Conference on Social Networks Analysis, Management and Security (SNAMS) \\  DOI: 10.1109/SNAMS.2018.8554724. https://arxiv.org/abs/1809.08513 (2018) </PAPER> <p>
+https://ieeexplore.ieee.org/document/8554724. 2018 Fifth International Conference on Social Networks Analysis, Management and Security (SNAMS) \\  DOI: 10.1109/SNAMS.2018.8554724. https://arxiv.org/abs/1809.08513 <b> (2018) </b> </PAPER> <p>
  
  <LI> <b> [16] </b> <NOM> Fragmentation, integration and macroprudential surveillance of the US financial industry: 
 Insights from network science </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Marco Geraci, Sophie B&eacutereau and  Jean&#45Yves Gnabo <br />
-PLoS ONE <b> 13</b>(4): e0195110. https://doi.org/10.1371/journal.pone.0195110 (2018) </PAPER> <p>
+PLoS ONE <b> 13</b>(4): e0195110. https://doi.org/10.1371/journal.pone.0195110 <b> (2018) </b> </PAPER> <p>
 
 <LI> <b> [15] </b> <NOM> The Role of Homophily in the Emergence of Opinion Controversies </NOM> <br />
 <PAPER> Floriana Gargiulo and Y&eacuterali <u>Gandica</u> <br />
 Journal of Artificial Societies and Social Journal of Artificial Societies and Social Simulation (JASSS) <b> 20</b> (3) 8.
-DOI: 10.18564/jasss.3448 (2017) </PAPER> <p>
+DOI: 10.18564/jasss.3448 <b> (2017) </b> </PAPER> <p>
 
 <LI> <b> [14] </b> <NOM> Emergent dense suburbs in a schelling metapopulation model: a simulation approach </NOM> <br />
 <PAPER> Floriana  Garguilo, Y&eacuterali <u>Gandica</u> and Timoteo Carletti <br />
-Advances in Complex Systems <b> 20</b> No. 1 (2017). https://doi.org/10.1142/S0219525917500011 </PAPER> <p>
+Advances in Complex Systems <b> 20</b> No. 1. https://doi.org/10.1142/S0219525917500011 <b> (2017) </b> </PAPER> <p>
 
 <LI> <b> [13] </b> <NOM> Stationarity of the inter&#45event power&#45law distributions </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho, Fernando Sampaio dos Aidos,
-Renaud Lambiotte and Timoteo Carletti <br /> PLoS ONE <b> 12</b>(3): e0174509. doi:10.1371/journal.pone.0174509 (2017) </PAPER> <p>
+Renaud Lambiotte and Timoteo Carletti <br /> PLoS ONE <b> 12</b>(3): e0174509. doi:10.1371/journal.pone.0174509 <b> (2017) </b> </PAPER> <p>
 
 <LI> <b> [12] </b> <NOM> What can Wikipedia tell us about the global or local measurements for burstiness?  </NOM> <br /> 
 <PAPER> Y&eacuterali <u>Gandica</u>,Renaud Lambiotte and Timoteo Carletti <br />
-Proceeding for the 10 th  International AAAI Conference on Web and Social Media (ICWSM­16) (2016) </PAPER> <p>
+Proceeding for the 10 th  International AAAI Conference on Web and Social Media (ICWSM­16) <b> (2016) </b> </PAPER> <p>
 
 <LI> <b> [11] </b> <NOM> Extrems events in the far from equilibrium Brusselator model with delay feedback </NOM> <br />
 <PAPER> Mustapha Tlidi, Y&eacuterali <u>Gandica</u>, Giorgio Sonnino, Etienne Averlant and Krassimir Panajotov <br /> 
-Entropy <b> 18</b>, 64; doi:10.3390/e18030064 (2016) </PAPER> <p>
+Entropy <b> 18</b>, 64; doi:10.3390/e18030064 <b> (2016) </b> </PAPER> <p>
 
 <LI> <b> [10] </b> <NOM> Nature of phase transitions in the 2D Axelrod&#45like coupled Potts models </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u> and Silvia Chiacchiera <br />
-Phys. Rev. E <b> 93</b>, 032132 (2016) </PAPER> <p>
+Phys. Rev. E <b> 93</b>, 032132 <b> (2016) </b> </PAPER> <p>
 
 <LI> <b> [9] </b> <NOM> Circadian patterns on Wikipedia edits </NOM> <br /> 
 <PAPER> Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho, Fernando Sampaio dos Aidos, Renaud Lambiotte and Timoteo Carletti <br />
-Proceedings of the 7th Workshop on Complex Networks, CompleNet 2016 </PAPER> <p> 
+Proceedings of the 7th Workshop on Complex Networks, CompleNet <b> 2016 </b> </PAPER> <p> 
 
 <LI> <b> [8] </b> <NOM> Can topology reshape segregation patterns? </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Floriana Gargiulo and Timoteo Carletti <br />
-Chaos, Solitons and Fractals <b> 90</b> (2015) 46–54 </PAPER> <p>
+Chaos, Solitons and Fractals <b> 90</b> 46–54 <b> (2015) </b> </PAPER> <p>
 
 <LI> <b> [7] </b> <NOM> Wikipedia editing dynamics </NOM> <br /> 
 <PAPER> Y&eacuterali <u>Gandica</u>, Jo&aacuteo Carvalho and Fernando Sampaio dos Aidos <br />
-Physical Review E <b> 91</b>, 012824 (2015) </PAPER> <p>
+Physical Review E <b> 91</b>, 012824 <b> (2015) </b>  </PAPER> <p>
 
 <LI> <b>[6] </b> <NOM> The dynamic nature of conflict in Wikipedia </NOM> <br /> 
 <PAPER> Y&eacuterali <u>Gandica</u>, Fernando Sampaio dos Aidos and Jo&aacuteo Carvalho <br /> 
-EPL <b> 108</b>,18003 (2014) </PAPER> <p>
+EPL <b> 108</b>,18003 <b> (2014) </b> </PAPER> <p>
 
 <LI> <b> [5] </b> <NOM> Hypoxia in vascular networks: a complex system approach to unraveling the Diabetes paradox </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Tobias Schwartz, Orlando Oliveira and Rui Travasso <br />
-PLoS ONE <b> 9</b> ,11 , e113165 (2014) </PAPER> <p>
+PLoS ONE <b> 9</b> ,11 , e113165 <b> (2014) </b> </PAPER> <p>
 
 <LI> <b> [4] </b> <NOM> A thermodynamic counterpart of the Axelrod model of social influence: One Dimensional case </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Ismardo Bonalde and Ernesto Medina <br /> 
-Physica A <b> 392</b>. Issue: 24. Pages: 6561­6570 (2013) </PAPER> <p>
+Physica A <b> 392</b>. Issue: 24. Pages: 6561­6570 <b> (2013) </b> </PAPER> <p>
 
 <LI> <b> [3] </b> <NOM> Cluster size entropy in the Axelrod model of social influence: Small&#45world networks and mass media </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, A. Charmell, J. Villegas­Febres and I. Bonalde <br />
-Physical Review E. <b> 84</b> , 046109 (2011) </PAPER> <p>
+Physical Review E. <b> 84</b> , 046109 <b> (2011) </b> </PAPER> <p>
 
 <LI> <b> [2] </b> <NOM> Continuous opinion model in small&#45world directed networks </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Marcelo del Castillo Mussot, Gerardo V&aacutesquez and Sergio Rojas <br />
-Physica A <b> 389</b> 24, 5864 &#45 5870 (2010) </PAPER> <p>
+Physica A <b> 389</b> 24, 5864 &#45 5870 <b> (2010) </b> </PAPER> <p>
 
 <LI> <b> [1] </b> <NOM> Complex propagation on directed small&#45world networks </NOM> <br />
 <PAPER> Y&eacuterali <u>Gandica</u>, Ismardo Bonalde and Juan Luis Cabrera <br />
-Physica A <b> 389</b> 19, 4172­4176 (2010) </PAPER> <p> 
+Physica A <b> 389</b> 19, 4172­4176 <b> (2010) </b> </PAPER> <p> 
 
 </OL>
 
