--- a/teaching.html
+++ b/teaching.html
@@ -17,8 +17,8 @@
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
 Associate Professor <p>
-Valencian International University (Spain), and <p>
-ECAM-EPMI Graduate school of engineering in Cergy- Paris (France)<p>
+Valencian International University (Spain) <p>
+
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
 <a href="https://www.webofscience.com/wos/author/record/M-6261-2013">Web of Science</a>   <p>
@@ -28,7 +28,7 @@ ECAM-EPMI Graduate school of engineering in Cergy- Paris (France)<p>
 </p></h2></div>
   <div class="col col-2">
   
-  <CENTER><H2>  <font size="6">     <font color="black">  <u> Courses at the Valencian International University (VIU) </u>  </font> </font> </H2>  </CENTER>
+   <CENTER><H2>  <font size="6">     <font color="black">  <u> Courses at the Valencian International University (VIU) </u>  </font> </font> </H2>  </CENTER>
      
 <H2>  <font size="5">     <font color="black">   2022-2023. Semester 2    </font> </font> </H2> 
    <LI> Advanced statistics. Master in Big Data.  
@@ -37,7 +37,7 @@ ECAM-EPMI Graduate school of engineering in Cergy- Paris (France)<p>
    <H2>  <font size="5">     <font color="black">   2022-2023. Semester 1    </font> </font> </H2> 
    <LI> Time series with applications in R. Department of Mathematics.
   
-  <CENTER><H2>  <font size="6">     <font color="black">  <u> Courses taught at CY Cergy Paris Université </u>  </font> </font> </H2>  </CENTER>
+  <CENTER><H2>  <font size="6">     <font color="black">  <u> Courses at CY Cergy Paris Université </u>  </font> </font> </H2>  </CENTER>
   
   <H2>  <font size="5">     <font color="black">  2021-2022. Semester 2    </font> </font> </H2> 
 
