--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@ the 21st Century </NOM>  <br />
   
 <LI> <b> [25] </b> <NOM> Signs of criticality in social explosions </NOM> <br />
 <PAPER> Mariano G. Beiró, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> 
-<br /> <b> Accepted Sci. Rep.</b> (https://arxiv.org/pdf/2305.01944.pdf) <b> (2024) </b> </PAPER> <p>
+<br /> Sci Rep  <b> 14 </b>, 3263. Doi.org/10.1038/s41598-024-53657-1 <b> (2024) </b> </PAPER> <p>
 
 <LI> <b> [24] </b> <NOM> Bursts of communication increase opinion diversity in the temporal Deffuant model </NOM>  <br />
 <PAPER> F. Zarei, <u> Y. Gandica</u> and  L. E C Rocha <br />  
