--- a/teaching.html
+++ b/teaching.html
@@ -28,13 +28,17 @@ Valencian International University (Spain) <p>
 </p></h2></div>
   <div class="col col-2">
   
-   <CENTER><H2>  <font size="6">     <font color="black">  <u> Courses at the Valencian International University (VIU) </u>  </font> </font> </H2>  </CENTER>
+   <CENTER><H2>  <font size="6">     <font color="black">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp; <u> Courses at the Valencian International University 
+   </u>  </font> </font> </H2>  </CENTER>
+   
+   <H2>  <font size="5">     <font color="black">   2023-2024. Semester 2    </font> </font> </H2> 
+   <LI> Data mining. Department of Mathematics. 
+  <LI>  Time series with applications in R. Department of Mathematics.
      
-<H2>  <font size="5">     <font color="black">   2022-2023. Semester 2    </font> </font> </H2> 
+<H2>  <font size="5">     <font color="black">   2023-2024. Semester 1    </font> </font> </H2> 
    <LI> Advanced statistics. Master in Big Data.  
-  <LI>  Data visualisation. Master in Big Data.
   
-   <H2>  <font size="5">     <font color="black">   2022-2023. Semester 1    </font> </font> </H2> 
+   <H2>  <font size="5">     <font color="black">   2022-2023. Semester 2    </font> </font> </H2> 
    <LI> Time series with applications in R. Department of Mathematics.
   
   <CENTER><H2>  <font size="6">     <font color="black">  <u> Courses at CY Cergy Paris Université </u>  </font> </font> </H2>  </CENTER>
