--- a/mentoring.html
+++ b/mentoring.html
@@ -30,36 +30,33 @@ Valencian International University (Spain) <p>
 
 <CENTER><H2>  <font size="6">     <font color="black">  <u>  Regional and global economic integration of Ethiopia in the 21st century </u>  </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="3">     <font color="black">  Tekilu Tadesse. Gent University. 2021-2023  (Co-tutoring with Prof. Prof. Luis E. C. Rocha) </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  Ph.D. students: Tekilu Tadesse. Dep. Economics and Dep. Physics and Astronomy. Gent University. 2021-2024  (Co-tutoring with Prof. Luis E. C. Rocha) </font> </font> </H2>  </CENTER>
 
-<CENTER><H2> <input type="image" src="figura.png" width="900/" /> </a> </H2>  </CENTER>
+<CENTER><H2> <input type="image" src="figura.png" width="800/" /> </a> </H2>  </CENTER>
 
 
-<CENTER><H2>  <font size="6">     <font color="black">  Multispin interaction models   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="6">     <font color="black">  Social manifestations: Some entropic measures, structure in communities and
+networks   </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="3">     <font color="black">  Maxime Lucas-Guerreau. Master-1. Physics Department. CY Paris-Université. (Before Univ. Cergy-Pontoise).   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  Daniel Rico. Master in Big Data. Valencian International University (VIU).   </font> </font> </H2>  </CENTER>
 
-<CENTER><H2> <input type="image" src="max.png" width="275/" /> </a> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  May - Sep 2023 (Paper submitted to the 2nd Meeting of the Spanish chapter of the Complex Systems Society).   </font> </font> </H2>  </CENTER>
+
+<CENTER><H2> <input type="image" src="daniel.png" width="900/" /> </a> </H2>  </CENTER>
 
 <CENTER><H2>  <font size="6">     <font color="black">  Wikipedia Editing Preferences: A dynamic study   </font> </font> </H2>  </CENTER>
 
 <CENTER><H2>  <font size="3">     <font color="black">  Julien Assuied. 3rd-year. International Bachelor in Data Science. CY-Tech Paris-Université.  </font> </font> </H2>  </CENTER>
 
-<CENTER><H2> <input type="image" src="julien.png" width="500/" /> </a> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  Apr - Aug 2021 (Paper: Frontiers in Big Data. section: Data Science 6, 1077318).   </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="6">     <font color="black"> <u>   Continuous Opinion Dynamics on Bilayer Temporal Networks </u>   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  Fien Goetmaeckers. Master. Department Economics and Dept Physics and Astronomy. Ghent University.   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  (Co-tutoring with Prof. Luis Enrique Correa da Rocha)   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <input type="image" src="fien.png" width="375/" /> </a> </H2>  </CENTER>
+<CENTER><H2> <input type="image" src="julien2.png" width="500/" /> </a> </H2>  </CENTER>
 
 <CENTER><H2>  <font size="6">     <font color="black">  <u>  Effect of the limit of attention on the Axelrod Model </u>  </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="3">     <font color="black">  Rémi Perrier. Master-2. Physics Department. CY Paris-Université. (Before Univ. Cergy-Pontoise).   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  Rémi Perrier. Master-2. Physics Department. CY Paris-Université (Co-tutoring with Prof. Laura Hernández).  </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="3">     <font color="black">  (Co-tutoring with Prof. Laura Hernández)   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  Mar - Jun 2020 (Paper: PLoS ONE 16(11): e0259295. DOI: 10.1371/journal.pone.0259295).   </font> </font> </H2>  </CENTER>
 
 <CENTER><H2> <input type="image" src="remi.png" width="370/" /> </a> </H2>  </CENTER>
 
