--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ student.
 </div>
 
 <!-- Esto es un comentario al código que no se verá en pantalla -->
+  <marquee behavior="scroll" direction="left">Here is some scrolling text... right to left!</marquee>
+
 
 </BODY>
 </HTML>
