--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ same university, she obtained her habilitation to supervise PhD theses (HDR) in 
 student.
 
 </p></hh1></div>
-     <marquee behavior="scroll" direction="left"> SAVE THE DATE: Third workshop Criticality on networks and socio-economic systems at CCS2024 (EXETER) </marquee>
+     <marquee behavior="scroll" direction="left"> <b> SAVE THE DATE: Third workshop Criticality on networks and socio-economic systems at CCS2024 (EXETER) </b> </marquee>
 </div>
 
 <!-- Esto es un comentario al código que no se verá en pantalla -->
