Adding Organisation of conferences

--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@
 <BODY> 
   <!-- <SECTION style="background: #ff66ff"> -->
     <SECTION>
- <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Y&eacuterali Gandica - Publications <span style="display:inline-block; width: 4cm;"></span> <A HREF="index.html"> <FONT SIZE=+1>homepage </FONT>  &emsp; </A>  <A HREF="tutorials.html"> <FONT SIZE=+1>Tutorials </FONT>  </A> &emsp; <A HREF="teaching.html"> <FONT SIZE=+1>Teaching </FONT>  </A> &emsp; <A HREF="mentoring.html"> <FONT SIZE=+1> Mentoring </FONT>  </A> </H1>
+ <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Y&eacuterali Gandica - Publications <span style="display:inline-block; width: 4cm;"></span> <A HREF="index.html"> <FONT SIZE=+1>homepage </FONT>  &emsp; </A>  <A HREF="tutorials.html"> <FONT SIZE=+1>Tutorials </FONT>  </A> &emsp; <A HREF="teaching.html"> <FONT SIZE=+1>Teaching </FONT>  </A> &emsp; <A HREF="mentoring.html"> <FONT SIZE=+1> Mentoring </FONT>  </A>  &emsp; <A HREF="conferencias.html"> <FONT SIZE=+1> Organisation Conferencias </FONT>  </A> </H1>
 </SECTION>
 
 
