--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Building on this preliminary work, I am now establishing my own research agenda,
 
 <h2 align="CENTER"> <img src="yo.png" width="250/">  
 <span style="display:inline-block; width: 2cm;"></span>
-<img src="dicho.png" width="400"> </h2> 
+<img src="dicho.png" width="400/"> </h2> 
 
 <hh1>
 <hr align="LEFT">
